Extending the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -56,7 +56,7 @@
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
         <img src="../images/book.png" /> <a href="https://www.xplenty.com/blog/data-engineering-what-does-a-data-engineer-do-how-do-i-become-one/" target="_new">What is Data Engineering?</a> <br />
         <img src="../images/check.png" /> <a href="../labs/cost-control.html" target="_new">Setup: AWS Account / Budgets</a> <br />
-        <img src="../images/check.png" /> <a href="" target="_new">Setup: AWS Keys / CLI</a> <br />
+        <img src="../images/check.png" /> <a href="https://www.youtube.com/watch?v=-UNmEC9OmR8&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-" target="_new">Setup: AWS Keys / CLI</a> <br />
       </td>
     </tr>
     <tr>
