--- a/schedule/index.html
+++ b/schedule/index.html
@@ -44,7 +44,9 @@
       <td>Student Survey</td>
       <td></td>
       <td>
-        <a href="https://l.uvarc.io/ds3002-survey" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a>
+        <a href="https://l.uvarc.io/ds3002-survey" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a> <br />
+        <img src="../images/check.png" /> <a href="../labs/cost-control.html" target="_new">Setup: AWS Account / Budgets</a> <br />
+        <img src="../images/check.png" /> <a href="https://www.youtube.com/watch?v=-UNmEC9OmR8&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-" target="_new">Setup: AWS Keys / CLI</a> <br />
       </td>
     </tr>
     <tr>
@@ -55,8 +57,6 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
         <img src="../images/book.png" /> <a href="https://www.xplenty.com/blog/data-engineering-what-does-a-data-engineer-do-how-do-i-become-one/" target="_new">What is Data Engineering?</a> <br />
-        <img src="../images/check.png" /> <a href="../labs/cost-control.html" target="_new">Setup: AWS Account / Budgets</a> <br />
-        <img src="../images/check.png" /> <a href="https://www.youtube.com/watch?v=-UNmEC9OmR8&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-" target="_new">Setup: AWS Keys / CLI</a> <br />
       </td>
     </tr>
     <tr>
@@ -66,8 +66,8 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=LeCJaTfEnEw" target="_new">Data Lakes & Analytics</a> <br />
-        <img src="../images/book.png" /> <a href="https://towardsdatascience.com/everything-a-data-scientist-should-know-about-data-management-6877788c6a42" target="_new">Data Management</a> <br />
-        <img src="../images/book.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (browse)<br />
+        <img src="../images/book.png" /> <a href="../assets/modern-cloud-data-platform.pdf" target="_new">Cloud Data Platforms</a> <br />
+        <img src="../images/book.png" /> <a href="../assets/data-science-data-management.pdf" target="_new">Data Management</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">Amazon S3</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">Google Storage</a> <br />
       </td>
@@ -80,6 +80,7 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/book.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (browse)<br />
         <img src="../images/book.png" /> <a href="https://docs.gitlab.com/ee/ci/pipelines/" target="_new">GitLab Pipelines</a> <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> <br /> 
         <img src="../images/lab.png" /> <a href="" target="_new">AWS S3 + Lambda</a> <br />
@@ -91,8 +92,8 @@
       <td>Consuming APIs</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=s7wmiS2mSXY" target="_new">What is an API?</a> <br />
+        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="" target="_new">GitHub API</a> <br />
       </td>
     </tr>
