--- a/schedule/index.html
+++ b/schedule/index.html
@@ -93,7 +93,7 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=s7wmiS2mSXY" target="_new">What is an API?</a> <br />
-        <img src="../images/book.png" /> <a href="https://l.uvarc.io/json-overview" target="_new">JSON Overview</a> <br /> -->
+        <img src="../images/book.png" /> <a href="https://l.uvarc.io/json-overview" target="_new">JSON Overview</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">GitHub API</a> <br />
       </td>
     </tr>
