--- a/schedule/index.html
+++ b/schedule/index.html
@@ -68,8 +68,8 @@
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=LeCJaTfEnEw" target="_new">Data Lakes & Analytics</a> <br />
         <img src="../images/book.png" /> <a href="../assets/modern-cloud-data-platform.pdf" target="_new">Cloud Data Platforms</a> <br />
         <img src="../images/book.png" /> <a href="../assets/data-science-data-management.pdf" target="_new">Data Management</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">Amazon S3</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">Google Storage</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15683?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8743639" target="_new">Amazon S3</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/1760?catalog_rank=%7B%22rank%22%3A6%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8743655" target="_new">Google Storage</a> <br />
       </td>
     </tr>
     <tr>
@@ -114,7 +114,7 @@
       <td><b>NO LECTURE 3/9/2021</b><br />Containers: Building</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=axKZpNfQXmg" target="_new">Container Workflows for Data Science</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=axKZpNfQXmg" target="_new">Container Workflows</a> <br />
         <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="" target="_new">Docker Lab</a>
       </td>
