--- a/schedule/index.html
+++ b/schedule/index.html
@@ -149,8 +149,8 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/lab.png" /> <a href="" target="_new">Database-driven Workflows</a>
       </td>
     </tr>
     <tr>
@@ -203,7 +203,9 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
-        <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a>
+        <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12762?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744166" target="_new">Serverless + Event-driven</a> <br />
+        
       </td>
     </tr>
     <tr>
