--- a/schedule/index.html
+++ b/schedule/index.html
@@ -192,7 +192,8 @@
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="" target="_new">ML Quests (select)</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">AWS Athena</a>
+        <img src="../images/lab.png" /> <a href="" target="_new">AWS Athena</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15698?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744616" target="_new">Serverless Text-to-Speech</a> <br />
       </td>
     </tr>
     <tr>
