--- a/schedule/index.html
+++ b/schedule/index.html
@@ -56,7 +56,8 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
-        <img src="../images/book.png" /> <a href="https://www.xplenty.com/blog/data-engineering-what-does-a-data-engineer-do-how-do-i-become-one/" target="_new">What is Data Engineering?</a> <br />
+        <!-- <img src="../images/book.png" /> <a href="https://www.xplenty.com/blog/data-engineering-what-does-a-data-engineer-do-how-do-i-become-one/" target="_new">What is Data Engineering?</a> <br /> -->
+        <img src="../images/book.png" /> <a href="https://medium.com/@rchang/a-beginners-guide-to-data-engineering-part-i-4227c5c457d7" target="_new">Data Engineering - Parts I/II/III</a> <br />
       </td>
     </tr>
     <tr>
