Google Form for labs

--- a/labs/index.html
+++ b/labs/index.html
@@ -64,6 +64,12 @@
         <img src="../images/lab.png" /> <a href="https://www.educative.io/explore" target="_new">Labs @ Educative</a> <br />
       </td>
     </tr>
+    <tr>
+      <td><strong>Track Your Progress</strong></td>
+      <td>
+        <img src="../images/writing.png" /> <a href="https://forms.gle/CdJix4qBf4iqBp6D7" target="_new" style="font-weight:bold;">Google Form</a> <br />
+      </td>
+    </tr>
   </tbody>
 </table>
 
