Google Form for labs

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <td>Weekly before class discussion</td>
     </tr>
     <tr>
-      <td><a href="">Labs</a></td>
+      <td><a href="labs/">Labs</a></td>
       <td>30%</td>
       <td>Select 10 through the semester / 3 points each</td>
     </tr>
