--- a/labs/index.html
+++ b/labs/index.html
@@ -34,40 +34,64 @@
 <table>
   <thead>
     <tr>
-      <th>Topics(s)</th>
+      <th>Difficulty</th>
       <th style="width:40%;">Do / Practice</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td><strong>More Labs</strong></td>
+      <td><strong>Track Your Progress</strong></td>
       <td>
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/11776?parent=catalog" target="_new">Lab: Amazon S3</a> <br />
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/create-mysql-db/" target="_new">Lab: Create an RDS Instance</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Lab: Katacoda Docker (pick any)</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/577?parent=catalog&utm_source=gcp&utm_campaign=freelabs&utm_medium=site" target="_new">Lab: GCP BigQuery</a> <br />
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10383?catalog_rank=%7B%22rank%22%3A55%2C%22num_filters%22%3A0%2C%22has_search%22%3Afalse%7D&parent=catalog" target="_new">Lab: AWS API Gateway</a> <br />
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10388?catalog_rank=%7B%22rank%22%3A66%2C%22num_filters%22%3A0%2C%22has_search%22%3Afalse%7D&parent=catalog" target="_new">Lab: AWS Key Management Service</a> <br />
-        <img src="../images/lab.png" /> <a href="https://l.uvarc.io/boto3-lab">Lab: <code>boto3</code> SDK</a> <br />
-        <img src="../images/lab.png" /> <a href="microservices.html">Lab: Docker 101</a> <br />
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10541?parent=catalog" target="_new">Lab: AWS Lambda</a> <br />
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10407?parent=catalog" target="_new">Lab: AWS DynamoDB</a> <br />
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/13055?catalog_rank=%7B%22rank%22%3A119%2C%22num_filters%22%3A0%2C%22has_search%22%3Afalse%7D&parent=catalog" target="_new">Lab: AWS Redshift</a>
+        <img src="../images/writing.png" /> <a href="https://forms.gle/CdJix4qBf4iqBp6D7" target="_new" style="font-weight:bold;">Google Form</a> <br />
       </td>
     </tr>
     <tr>
-      <td><strong>Vendor Training</strong></td>
+      <td><strong>Beginner</strong></td>
+      <td>
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/15683?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872374" target="_new">Amazon S3</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://l.uvarc.io/boto3-lab"><code>boto3</code> SDK</a> (Free) <br />
+        <img src="../images/lab.png" /> <a href="microservices.html">Docker 101</a> (Free) <br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/1760?catalog_rank=%7B%22rank%22%3A6%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8743655" target="_new">Google Storage</a> (1 credit)<br />
+        <img src="../images/lab.png" /> GitHub API <br />
+        <img src="../images/lab.png" /> Publish an API using Chalice <br />
+        <img src="../images/lab.png" /> Docker Labs <br />
+      </td>
+    </tr>
+    <tr>
+      <td><strong>Intermediate</strong></td>
+      <td>
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15605?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646302" target="_new">AWS Relational Database Service</a> (1 credit)<br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/577?parent=catalog&utm_source=gcp&utm_campaign=freelabs&utm_medium=site" target="_new">GCP BigQuery</a> (Free) <br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/create-mysql-db/" target="_new">Create an RDS Instance</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker (Free, pick any)</a> <br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> (Free)<br /> 
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14177?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872435" target="_new">AWS Redshift</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="hhttps://amazon.qwiklabs.com/focuses/15682?catalog_rank=%7B%22rank%22%3A4%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872412" target="_new">AWS Lambda</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14815?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872424" target="_new">Intro to AWS DynamoDB</a> (Free) <br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15698?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744616" target="_new">Serverless Text-to-Speech</a> (8 credits)<br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12762?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744166" target="_new">Serverless + Event-driven</a> (10 credits)<br />
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872415" target="_new">CRUD using DynamoDB</a> (10 credits)<br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a><br />
+        <img src="../images/lab.png" /> AWS S3 + Lambda <br />
+        <img src="../images/lab.png" /> Publish a Container to Lightsail <br />
+      </td>
+    </tr>
+    <tr>
+      <td><strong>Advanced</strong></td>
+      <td>
+        <img src="../images/lab.png" /> ML Quests (select) <br />
+        <img src="../images/lab.png" /> AWS Athena <br />
+        <img src="../images/lab.png" /> Database-driven Workflows <br />
+        <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> <br />
+      </td>
+    </tr>
+    <tr>
+      <td><strong>More: Vendor Training</strong></td>
       <td>
         <img src="../images/lab.png" /> <a href="https://docs.microsoft.com/en-us/learn/azure/?tab=tab-learn-for-free" target="_new" style="font-weight:bold;">Azure Learning Paths</a> <br />
         <img src="../images/lab.png" /> <a href="https://cloud.google.com/training/" target="_new" style="font-weight:bold;">Google Cloud Training</a> <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/" target="_new" style="font-weight:bold;">AWS Hands-On Tutorials</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.educative.io/explore" target="_new">Labs @ Educative</a> <br />
-      </td>
-    </tr>
-    <tr>
-      <td><strong>Track Your Progress</strong></td>
-      <td>
-        <img src="../images/writing.png" /> <a href="https://forms.gle/CdJix4qBf4iqBp6D7" target="_new" style="font-weight:bold;">Google Form</a> <br />
       </td>
     </tr>
   </tbody>
