--- a/labs/index.html
+++ b/labs/index.html
@@ -52,9 +52,9 @@
         <img src="../images/lab.png" /> <a href="https://l.uvarc.io/boto3-lab"><code>boto3</code> SDK</a> (Free) <br />
         <img src="../images/lab.png" /> <a href="microservices.html">Docker 101</a> (Free) <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/1760?catalog_rank=%7B%22rank%22%3A6%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8743655" target="_new">Google Storage</a> (1 credit)<br />
+        <img src="../images/lab.png" /> <a href="https://training.play-with-docker.com/alacart/" target="_new">Docker Classroom</a> (Free, pick 2)<br />
         <img src="../images/lab.png" /> GitHub API <br />
         <img src="../images/lab.png" /> Publish an API using Chalice <br />
-        <img src="../images/lab.png" /> Docker Labs <br />
       </td>
     </tr>
     <tr>
@@ -79,10 +79,12 @@
     <tr>
       <td><strong>Advanced</strong></td>
       <td>
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice+CDK API Builds</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/automatically-deploy-a-serverless-rest-api-from-github-with-aws-chalice/" target="_new">Automated API Deployments</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> (TBD)<br />
         <img src="../images/lab.png" /> ML Quests (select) <br />
         <img src="../images/lab.png" /> AWS Athena <br />
         <img src="../images/lab.png" /> Database-driven Workflows <br />
-        <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> <br />
       </td>
     </tr>
     <tr>
