Extending labs/etc.

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -34,7 +34,7 @@
       <th style="width:15%;">Date</th>
       <th>Topics(s)</th>
       <th>Lectures</th>
-      <th style="width:30%;">Read / Watch / Do</th>
+      <th style="width:30%;">Read / Watch / Suggested Labs</th>
     </tr>
   </thead>
   <tbody>
