--- a/schedule/index.html
+++ b/schedule/index.html
@@ -80,7 +80,7 @@
       <td>Data: Scripting, Pipelines, and Automation</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=C6Abv87D5dU" target="_new">Data Pipeline Frameworks</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (browse)<br />
         <img src="../images/book.png" /> <a href="https://docs.gitlab.com/ee/ci/pipelines/" target="_new">GitLab Pipelines</a> <br />
