--- a/schedule/index.html
+++ b/schedule/index.html
@@ -83,9 +83,8 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=C6Abv87D5dU" target="_new">Data Pipeline Frameworks</a> <br />
         <img src="../images/book.png" /> <a href="https://towardsdatascience.com/scalable-efficient-big-data-analytics-machine-learning-pipeline-architecture-on-cloud-4d59efc092b5" target="_new">Pipeline Architectures</a><br />
-        <img src="../images/book.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (browse)<br />
+        <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (Select 2)<br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> <br /> 
-        <img src="../images/lab.png" /> <a href="" target="_new">AWS S3 + Lambda</a> <br />
       </td>
     </tr>
     <tr>
