More lab cleanups

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -95,7 +95,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=s7wmiS2mSXY" target="_new">What is an API?</a> <br />
         <img src="../images/book.png" /> <a href="https://l.uvarc.io/json-overview" target="_new">JSON Overview</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">GitHub API</a> <br />
+        <img src="../images/lab.png" /> GitHub API <br />
       </td>
     </tr>
     <tr>
