--- a/labs/index.html
+++ b/labs/index.html
@@ -74,12 +74,13 @@
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12762?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744166" target="_new">Serverless + Event-driven</a> (10 credits)<br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872415" target="_new">CRUD using DynamoDB</a> (10 credits)<br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a><br />
+        <img src="../images/lab.png" /> <a href="https://aws.github.io/chalice/tutorials/basicrestapi.html" target="_new">Basic REST API</a> (Free)<br />
       </td>
     </tr>
     <tr>
       <td><strong>Advanced</strong></td>
       <td>
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice+CDK API Builds</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice + CDK API Builds</a> (Free)<br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/automatically-deploy-a-serverless-rest-api-from-github-with-aws-chalice/" target="_new">Automated API Deployments</a> (Free)<br />
         <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> (TBD)<br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14265?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8733409" target="_new">AWS Elasticache</a> (1 credit)<br />
