More lab cleanups

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -95,7 +95,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=s7wmiS2mSXY" target="_new">What is an API?</a> <br />
         <img src="../images/book.png" /> <a href="https://l.uvarc.io/json-overview" target="_new">JSON Overview</a> <br />
-        <img src="../images/lab.png" /> GitHub API <br />
+        <img src="../images/lab.png" /> <a href="" target="_new">GitHub API</a> (Free)<br />
       </td>
     </tr>
     <tr>
@@ -106,7 +106,8 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world" target="_new">Miguel Grinberg: Flask APIs</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">Publish an API using Chalice</a> <br />
+        <img src="../images/lab.png" /> <a href="https://aws.github.io/chalice/tutorials/basicrestapi.html" target="_new">Basic REST API</a> (Free, beginner)<br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice + CDK API Builds</a> (Free, advanced)<br />
       </td>
     </tr>
     <tr>
