More lab cleanups

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -116,9 +116,10 @@
       <td><b>NO LECTURE 3/9/2021</b><br />Containers: Building</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=HMxDaM3-c1U&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-&index=7" target="_new">Docker Basics</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=axKZpNfQXmg" target="_new">Container Workflows</a> <br />
         <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
-        <img src="../images/lab.png" /> <a href="" target="_new">Docker Lab</a>
+        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker (Free, pick any)</a> <br />
       </td>
     </tr>
     <tr>
