--- a/labs/index.html
+++ b/labs/index.html
@@ -85,6 +85,7 @@
         <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> (TBD)<br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14265?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8733409" target="_new">AWS Elasticache</a> (1 credit)<br />
         <img src="../images/lab.png" /> <a href="https://athena-in-action.workshop.aws/" target="_new">AWS Athena Intro</a> (Free, cost TBD) <br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/aws/lightsail-containers-an-easy-way-to-run-your-containers-in-the-cloud/" target="_new">Publish a Container to Lightsail</a> <br />
         <img src="../images/lab.png" /> ML Quests (select) <br />
         <img src="../images/lab.png" /> Database-driven Workflows <br />
       </td>
