--- a/labs/index.html
+++ b/labs/index.html
@@ -56,7 +56,6 @@
         <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (Free) <br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14177?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872435" target="_new">Intro to AWS Redshift</a> (Free)<br />
         <img src="../images/lab.png" /> GitHub API <br />
-        <img src="../images/lab.png" /> Publish an API using Chalice <br />
       </td>
     </tr>
     <tr>
@@ -65,7 +64,7 @@
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15605?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646302" target="_new">AWS Relational Database Service</a> (1 credit)<br />
         <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/577?parent=catalog&utm_source=gcp&utm_campaign=freelabs&utm_medium=site" target="_new">GCP BigQuery</a> (Free) <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/create-mysql-db/" target="_new">Create an RDS Instance</a> (Free)<br />
-        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker (Free, pick any)</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker</a> (Free, pick any) <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> (Free)<br /> 
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/14124?catalog_rank=%7B%22rank%22%3A4%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8733391" target="_new">AWS Redshift</a> (10 credits)<br />
         <img src="../images/lab.png" /> <a href="hhttps://amazon.qwiklabs.com/focuses/15682?catalog_rank=%7B%22rank%22%3A4%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872412" target="_new">AWS Lambda</a> (Free)<br />
