More lab cleanups

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -34,7 +34,7 @@
       <th style="width:15%;">Date</th>
       <th>Topics(s)</th>
       <th>Lectures</th>
-      <th style="width:30%;">Read / Watch / Suggested Labs</th>
+      <th style="width:35%;">Read / Watch / Suggested Labs</th>
     </tr>
   </thead>
   <tbody>
@@ -95,7 +95,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=s7wmiS2mSXY" target="_new">What is an API?</a> <br />
         <img src="../images/book.png" /> <a href="https://l.uvarc.io/json-overview" target="_new">JSON Overview</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">GitHub API</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="" target="_new">GitHub API</a> <br />
       </td>
     </tr>
     <tr>
@@ -106,8 +106,8 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world" target="_new">Miguel Grinberg: Flask APIs</a> <br />
-        <img src="../images/lab.png" /> <a href="https://aws.github.io/chalice/tutorials/basicrestapi.html" target="_new">Basic REST API</a> (Free, beginner)<br />
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice + CDK API Builds</a> (Free, advanced)<br />
+        <img src="../images/lab.png" /> <a href="https://aws.github.io/chalice/tutorials/basicrestapi.html" target="_new">Basic REST API</a> (Beginner)<br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice + CDK API Builds</a> (Advanced)<br />
       </td>
     </tr>
     <tr>
@@ -119,7 +119,7 @@
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=HMxDaM3-c1U&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-&index=7" target="_new">Docker Basics</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=axKZpNfQXmg" target="_new">Container Workflows</a> <br />
         <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
-        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker (Free, pick any)</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker (Select 3)</a> <br />
       </td>
     </tr>
     <tr>
