--- a/labs/index.html
+++ b/labs/index.html
@@ -61,6 +61,7 @@
     <tr>
       <td><strong>Intermediate</strong></td>
       <td>
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12363?catalog_rank=%7B%22rank%22%3A8%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8908142" target="_new">Batch Pipelines in GCP</a> (5 credits)<br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15605?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646302" target="_new">AWS Relational Database Service</a> (1 credit)<br />
         <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/577?parent=catalog&utm_source=gcp&utm_campaign=freelabs&utm_medium=site" target="_new">GCP BigQuery</a> (Free) <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/create-mysql-db/" target="_new">Create an RDS Instance</a> (Free)<br />
