--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
           <li><a href="https://l.uvarc.io/ds3002-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
           <li><a href="https://l.uvarc.io/ds3002-discord" target="_new">Discussions on <strong>Discord</strong></a></li>
         </ul>
+        <ul>
+          <li><a href="https://nmagee.github.io/ds3002/labs/">Full list of <strong>Labs</strong></a></li>
+          <li><a href="https://qwiklabs.com/" target="_new">Hands-on <strong>Qwiklabs</strong></a></li>
+          <li><a href="https://github.com/ds3002/course/" target="_new">Course <strong>Container</strong></a></li>
+        </ul>
         <img alt="Discord" src="https://img.shields.io/discord/776171396153475093"> 
         <img alt="GitHub commit activity" src="https://img.shields.io/github/commit-activity/m/nmagee/ds3002"> 
         <img alt="GitHub last commit" src="https://img.shields.io/github/last-commit/nmagee/ds3002?color=red">
