--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
           <li><a href="https://nmagee.github.io/ds3002/labs/">Full list of <strong>Labs</strong></a></li>
           <li><a href="https://qwiklabs.com/" target="_new">Hands-on <strong>Qwiklabs</strong></a></li>
-          <li><a href="https://github.com/ds3002/course/" target="_new">Course <strong>Container</strong></a></li>
+          <li><a href="https://github.com/ds3002/course/blob/main/README.md" target="_new">Course <strong>Container</strong></a></li>
         </ul>
         <img alt="Discord" src="https://img.shields.io/discord/776171396153475093"> 
         <img alt="GitHub commit activity" src="https://img.shields.io/github/commit-activity/m/nmagee/ds3002"> 
