--- a/schedule/index.html
+++ b/schedule/index.html
@@ -25,7 +25,7 @@
         <ul>
           <li><a href="https://nmagee.github.io/ds3002/labs/">Full list of <strong>Labs</strong></a></li>
           <li><a href="https://qwiklabs.com/" target="_new">Hands-on <strong>Qwiklabs</strong></a></li>
-          <li><a href="https://github.com/ds3002/course/" target="_new">Course <strong>Container</strong></a></li>
+          <li><a href="https://github.com/ds3002/course/blob/main/README.md" target="_new">Course <strong>Container</strong></a></li>
         </ul>
       </header>
 
