--- a/labs/index.html
+++ b/labs/index.html
@@ -26,6 +26,11 @@
           <li><a href="https://l.uvarc.io/ds3002-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
           <li><a href="https://l.uvarc.io/ds3002-discord">Discussions on <strong>Discord</strong></a></li>
         </ul>
+        <ul>
+          <li><a href="https://nmagee.github.io/ds3002/labs/">Full list of <strong>Labs</strong></a></li>
+          <li><a href="https://qwiklabs.com/" target="_new">Hands-on <strong>Qwiklabs</strong></a></li>
+          <li><a href="https://github.com/ds3002/course/blob/main/README.md" target="_new">Course <strong>Container</strong></a></li>
+        </ul>
       </header>
       <section>
         
