--- a/labs/index.html
+++ b/labs/index.html
@@ -58,7 +58,7 @@
         <img src="../images/lab.png" /> <a href="https://l.uvarc.io/boto3-lab"><code>boto3</code> SDK</a>  <br />
         <img src="../images/lab.png" /> <a href="microservices.html">Docker 101</a>  <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/1760?catalog_rank=%7B%22rank%22%3A6%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8743655" target="_new">Google Storage</a> (1 credit)<br />
-        <img src="../images/lab.png" /> <a href="https://training.play-with-docker.com/alacart/" target="_new">Docker Classroom</a> (Free, pick 2)<br />
+        <img src="../images/lab.png" /> <a href="https://training.play-with-docker.com/alacart/" target="_new">Docker Classroom</a> (Select 2)<br />
         <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a>  <br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14177?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872435" target="_new">Intro to AWS Redshift</a> <br />
         <img src="../images/lab.png" /> GitHub API <br />
@@ -71,7 +71,7 @@
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15605?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646302" target="_new">AWS Relational Database Service</a> (1 credit)<br />
         <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/577?parent=catalog&utm_source=gcp&utm_campaign=freelabs&utm_medium=site" target="_new">GCP BigQuery</a>  <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/create-mysql-db/" target="_new">Create an RDS Instance</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker</a> (Free, pick any) <br />
+        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker</a> (Select 1) <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> <br /> 
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/14124?catalog_rank=%7B%22rank%22%3A4%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8733391" target="_new">AWS Redshift</a> (10 credits)<br />
         <img src="../images/lab.png" /> <a href="hhttps://amazon.qwiklabs.com/focuses/15682?catalog_rank=%7B%22rank%22%3A4%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872412" target="_new">AWS Lambda</a> <br />
@@ -90,7 +90,7 @@
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/automatically-deploy-a-serverless-rest-api-from-github-with-aws-chalice/" target="_new">Automated API Deployments</a> <br />
         <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> (TBD)<br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14265?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8733409" target="_new">AWS Elasticache</a> (1 credit)<br />
-        <img src="../images/lab.png" /> <a href="https://athena-in-action.workshop.aws/" target="_new">AWS Athena Intro</a> (Free, cost TBD) <br />
+        <img src="../images/lab.png" /> <a href="https://athena-in-action.workshop.aws/" target="_new">AWS Athena Intro</a> (Cost TBD) <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/aws/lightsail-containers-an-easy-way-to-run-your-containers-in-the-cloud/" target="_new">Publish a Container to Lightsail</a> <br />
         <img src="../images/lab.png" /> ML Quests (select) <br />
         <img src="../images/lab.png" /> Database-driven Workflows <br />
