--- a/schedule/index.html
+++ b/schedule/index.html
@@ -90,6 +90,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=C6Abv87D5dU" target="_new">Data Pipeline Frameworks</a> <br />
         <img src="../images/book.png" /> <a href="https://towardsdatascience.com/scalable-efficient-big-data-analytics-machine-learning-pipeline-architecture-on-cloud-4d59efc092b5" target="_new">Pipeline Architectures</a><br />
+        <img src="../images/check.png" /> <a href="https://github.com/ds3002/course/tree/main/practice/05-scripts" target="_new">Bash/Python Scripting</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (Beginner, select 2)<br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> (Beginner)<br /> 
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12363?catalog_rank=%7B%22rank%22%3A8%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8908142" target="_new">Batch Pipelines in GCP</a> (Advanced)<br />
