--- a/labs/index.html
+++ b/labs/index.html
@@ -86,6 +86,7 @@
     <tr>
       <td><strong>Advanced</strong></td>
       <td>
+        <img src="../images/lab.png" /> <a href="https://chalice-workshop.readthedocs.io/en/latest/index.html" target="_new">AWS Chalice Workshops (Select one)</a> <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice + CDK API Builds</a> <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/automatically-deploy-a-serverless-rest-api-from-github-with-aws-chalice/" target="_new">Automated API Deployments</a> <br />
         <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> (TBD)<br />
