--- a/schedule/index.html
+++ b/schedule/index.html
@@ -103,6 +103,7 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=s7wmiS2mSXY" target="_new">What is an API?</a> <br />
+        <img src="../images/book.png" /> <a href="https://www.dataquest.io/blog/python-api-tutorial/" target="_new">API Overview</a> <br />
         <img src="../images/book.png" /> <a href="https://l.uvarc.io/json-overview" target="_new">JSON Overview</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">Discord Bot </a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">GitHub API </a> <br />
