--- a/labs/github-api.html
+++ b/labs/github-api.html
@@ -74,6 +74,7 @@ data science toolkit.</p>
   <li>Remember to include an authentication header (using your token) given in the <code>py-post.py</code> example.</li>
   <li>Test and iterate on your code, creating and deleting gists easily.</li>
   <li>Submit a screenshot of your code to verify completion of this lab.</li>
+  <li><b>BONUS:</b> Create a "real" gist with usable content, such as a working version of the script you wrote above.</li>
 </ol>
 
 <h3 style="margin-top:2rem;">Create a Repository</h3>
@@ -88,8 +89,9 @@ data science toolkit.</p>
   </li>
   <li>This documentation will show you the proper ENDPOINT, PARAMETER(S), DATA, and any additional required HEADERS.</li>
   <li>Remember to include an authentication header (using your token) given in the <code>py-post.py</code> example.</li>
-  <li>Test and iterate on your code, creating and deleting gists easily.</li>
+  <li>Test and iterate on your code, creating repositories and manually deleting.</li>
   <li>Submit a screenshot of your code to verify completion of this lab.</li>
+  <li><b>BONUS:</b> Programmatically DELETE an existing repository using Python3.</li>
 </ol>
 
       </section>
