--- a/labs/github-api.html
+++ b/labs/github-api.html
@@ -74,7 +74,7 @@ data science toolkit.</p>
   <li>Remember to include an authentication header (using your token) given in the <code>py-post.py</code> example.</li>
   <li>Test and iterate on your code, creating and deleting gists easily.</li>
   <li>Submit a screenshot of your code to verify completion of this lab.</li>
-  <li><b>BONUS:</b> Create a "real" gist with usable content, such as a working version of the script you wrote above.</li>
+  <li><b>BONUS:</b> Create a "real" gist (programmatically) with meaningful content, such as a working version of the script you wrote above.</li>
 </ol>
 
 <h3 style="margin-top:2rem;">Create a Repository</h3>
