--- a/labs/index.html
+++ b/labs/index.html
@@ -61,7 +61,7 @@
         <img src="../images/lab.png" /> <a href="https://training.play-with-docker.com/alacart/" target="_new">Docker Classroom</a> (Select 2)<br />
         <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a>  <br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14177?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872435" target="_new">Intro to AWS Redshift</a> <br />
-        <img src="../images/lab.png" /> GitHub API <br />
+        <img src="../images/lab.png" /> <a href="github-api.html">GitHub API</a><br />
       </td>
     </tr>
     <tr>
