Cleanup and add answers

--- a/labs/github-api.html
+++ b/labs/github-api.html
@@ -77,6 +77,8 @@ data science toolkit.</p>
   <li><b>BONUS:</b> Create a "real" gist (programmatically) with meaningful content, such as a working version of the script you wrote above.</li>
 </ol>
 
+<p>Scroll below to see a working answer.</p>
+
 <h3 style="margin-top:2rem;">Create a Repository</h3>
 
 <div style="margin:2rem;">
@@ -93,6 +95,17 @@ data science toolkit.</p>
   <li>Submit a screenshot of your code to verify completion of this lab.</li>
   <li><b>BONUS:</b> Programmatically DELETE an existing repository using Python3.</li>
 </ol>
+
+<p>Scroll below to see a working answer.</p>
+
+<div style="width:100%;height:1000px;">&nbsp;</div>
+<h3 style="margin-top:2rem;">Answers</h3>
+
+<h4>Delete a Gist</h4>
+<iframe src="https://trinket.io/embed/python3/95eef0164d?toggleCode=true&runOption=run" width="100%" height="556" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+<h4 style="margin-top:4rem;">Create a Repo</h4>
+<iframe src="https://trinket.io/embed/python3/a5ace044df?toggleCode=true&runOption=run" width="100%" height="556" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
       </section>
       <footer>
