--- a/schedule/index.html
+++ b/schedule/index.html
@@ -106,7 +106,7 @@
         <img src="../images/book.png" /> <a href="https://www.dataquest.io/blog/python-api-tutorial/" target="_new">API Overview</a> <br />
         <img src="../images/book.png" /> <a href="https://towardsdatascience.com/all-the-things-you-can-do-with-github-api-and-python-f01790fca131" target="_new">Github API + Data Science</a> <br />
         <img src="../images/check.png" /> <a href="https://l.uvarc.io/json-overview" target="_new">JSON Overview</a> <br />
-        <img src="../images/lab.png" /> <a href="../labs/github-api.html" target="_new">GitHub API</a> <br />
+        <img src="../images/lab.png" /> <a href="../labs/github-api.html">GitHub API</a> <br />
       </td>
     </tr>
     <tr>
