--- a/labs/github-api.html
+++ b/labs/github-api.html
@@ -47,12 +47,14 @@ with remote APIs using authentication and over a variety of methods and endpoint
 data science toolkit.</p>
 
 <p>This lab extends on the hands-on portion of Lecture 04 by asking you to complete two additional tasks:
+</p>
 <ol>
   <li>With a Github Gist you have already created, <code>delete</code> the gist programmatically using Python3.</li>
   <li>Build upon the POST method code distributed with Lecture 04 to create a new Github repository in your account using Python3.</li>
 </ol>
 
-</p>
+<p>You may write and test your Python code in any editor you choose - Visual Studio, Atom, nano, Notepad, PyCharm, Eclipse, etc.
+There is no expectation that you MUST use any specific editor.</p>
 
 <h3>Setup</h3>
 
