--- a/schedule/index.html
+++ b/schedule/index.html
@@ -122,6 +122,15 @@
       </td>
     </tr>
     <tr>
+      <td></td>
+      <td>3/8/2021</td>
+      <td><b>Quiz 1</b> - Due by 3/12/2021</td>
+      <td></td>
+      <td>
+        <img src="../images/writing.png" /> Take the Quiz<br />
+      </td>
+    </tr>
+    <tr>
       <td>06</td>
       <td>3/8/2021</td>
       <td><b>NO DISCUSSION 3/11/2021</b><br />Containers: Building</td>
