Adding another short reading

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -133,20 +133,20 @@
     <tr>
       <td>06</td>
       <td>3/8/2021</td>
-      <td><b>NO DISCUSSION 3/11/2021</b><br />Containers: Building</td>
+      <td><b>NO DISCUSSION 3/11/2021</b><br />Containers: Running</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/book.png" /> <a href="https://docs.docker.com/get-started/overview/" target="_new">Docker Overview</a> <br />
+        <img src="../images/book.png" /> <a href="https://towardsdatascience.com/docker-for-data-science-a-step-by-step-guide-1e5f7f3baf8e" target="_new">Docker for Data Science</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=HMxDaM3-c1U&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-&index=7" target="_new">Docker Basics</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=axKZpNfQXmg" target="_new">Container Workflows</a> <br />
-        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker</a> (Select 3)<br />
       </td>
     </tr>
     <tr>
       <td>07</td>
       <td>3/15/2021</td>
-      <td>Containers: Deploying</td>
+      <td>Containers: Building and Deploying</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
