Adding another short reading

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -133,7 +133,7 @@
     <tr>
       <td>06</td>
       <td>3/8/2021</td>
-      <td><b>NO DISCUSSION 3/11/2021</b><br />Containers: Running</td>
+      <td>Containers: Running & Using<br /><b>NO DISCUSSION 3/11/2021</b></td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/book.png" /> <a href="https://docs.docker.com/get-started/overview/" target="_new">Docker Overview</a> <br />
@@ -146,7 +146,7 @@
     <tr>
       <td>07</td>
       <td>3/15/2021</td>
-      <td>Containers: Building and Deploying</td>
+      <td>Containers: Building & Deploying</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
