Updated with quiz dates

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -167,6 +167,15 @@
       </td>
     </tr>
     <tr>
+      <td></td>
+      <td>3/29/2021</td>
+      <td><b>Quiz 2</b></td>
+      <td></td>
+      <td>
+        <img src="../images/writing.png" /> Take the Quiz<br />
+      </td>
+    </tr>
+    <tr>
       <td>09</td>
       <td>3/29/2021</td>
       <td>SQL & Relational Database Services</td>
@@ -197,6 +206,15 @@
       </td>
     </tr>
     <tr>
+      <td></td>
+      <td>4/12/2021</td>
+      <td><b>Quiz 3</b></td>
+      <td></td>
+      <td>
+        <img src="../images/writing.png" /> Take the Quiz<br />
+      </td>
+    </tr>
+    <tr>
       <td>11</td>
       <td>4/12/2021</td>
       <td>NoSQL Database Services<br /><b>NO DISCUSSION 4/15/2021</b></td>
@@ -218,6 +236,15 @@
         <img src="../images/lab.png" /> <a href="" target="_new">ML Quests (select)</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">AWS Athena</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15698?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744616" target="_new">Serverless Text-to-Speech</a> <br />
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>4/26/2021</td>
+      <td><b>Quiz 4</b></td>
+      <td></td>
+      <td>
+        <img src="../images/writing.png" /> Take the Quiz<br />
       </td>
     </tr>
     <tr>
