--- a/schedule/index.html
+++ b/schedule/index.html
@@ -160,6 +160,7 @@
       <td>SQL & Relational Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler I</a> <br />
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
         <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
@@ -199,7 +200,7 @@
       <td>NoSQL & Unstructured Data</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler II</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=egsQ3QRT_Xc&feature=youtu.be" target="_new">MongoDB in 5 Minutes</a> <br />
         <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
